# zplab

./: .gitignore  .gitmodules  acquisition.vpj  acquisition.vpw  acquisition_direct_manip.py  andorpy_example.py  fix_dylib_internal_paths.py  freeimage.py  go.py  greenqt.py  launch_mm_ipython.bash  launch_riswidget_for_debugging.py  launch_scope_server.py  lumencor.py  mmdev.py  multiwin.py  ris_widget_standin.py  riswidget_benchmark.py  test.py
acquisition/: acquire_focus_range_stack.py  acquisition_exception.py  device.py  focus_range_stack.py
acquisition/andor/: Makefile  _AndorException.cpp  _AndorException.h  _Api.cpp  _Api.h  _Camera.cpp  _Camera.h  _GilScopedRelease.cpp  _GilScopedRelease.h  _andor.cpp  _common.h  andor.py  andor_exception.py  direct_manip.py  direct_manip.ui
acquisition/auto_focuser/: auto_focuser.py
acquisition/brightfield_led/: brightfield_led.py  direct_manip.py  direct_manip.ui
acquisition/brightfield_led/adafruit_atmega32u4/: adafruit_atmega32u4.pde
acquisition/brightfield_led/brightfield_controller/: brightfield_controller.ino
acquisition/dm6000b/: dm6000b.py  enums.py  function_unit.py  method.py  objective_turret.py  packet.py  response.py
acquisition/dm6000b/function_units/: condenser_aperature_iris.py  cube_turret.py  dic_turret.py  il_turret.py  lamp.py  main.py  objective_turret.py  stage.py
acquisition/dm6000b/subdevices/: stage.py  subdevice.py
acquisition/leica_dm/: camera_mm.py  microscope_mm.py  stage_mm.py
acquisition/lumencor/: direct_manip.py  direct_manip.ui  lumencor.py  lumencor.ui  lumencor_exception.py
acquisition/microscope/: microscope.py
acquisition/pedals/: pedal.py  pedals.ino  pedals.py
acquisition/peltier/: Incubator.py  incubator.py  peltier.py  test_Incubator.py
acquisition/root/: direct_manip.py  root.py
acquisition_scripts/: acquisition_scripts.vpj  age1_test.py  aging_fluorescence.py  allyl_validation.py  autofocus.py  deathfluorescence.py  experiment01.py  experiment01_a.py  experiment02.py  hw1360_clear.py  hw1360_development.py  hw1360_development_ng.py  life_assay_pilot.py  lipofuscin_fluorescence.py  lipofuscin_fluorescence2.py  make_references.py  peg_test.py  sample.py  task_runner.py
acquisition_scripts/non_rpc/: aging_fluorescence.py  autofocus.py  experiment01.py  experiment01_a.py  sample.py
make_andor_ctypes/: andor.py  make_andor.py  output_ctypes.py
misc/: average_images.py  brenner_edge_detector.py  callbacking_video_maker.py  collect_stage_movement_data.py  experiment_video_maker.py  experiment_video_maker.ui  extensible_video_maker.py  extensible_video_maker.ui  extensible_video_maker_multiwell_usage_sample.py  extensible_video_maker_usage_sample.py  fluorescence_trained_brightfield_worm_finder.py  generate_ctypes.py  gogostagegogoacquiregogogonotadrillgogogo.py  image_fft.py  image_from_multi_image_statistics.py  image_transfer_zmq_benchmark.py  make_experiment_01_a_dataset.py  make_experiment_01_a_masks.py  make_lipofuscin_experiment2_video.py  make_mask_from_fluorescence.py  make_slickedit_files_section.py  manually_score_images.py  manually_score_images.ui  minicom_to_scope.bash  misc.vpj  pca.py  resumable_slot_with_generator_example.py  scan_slide.py  skeletonize_fluorescence_masks.py  terrible_eval_thread.py  test_skimage_16bit_png.py  vs_pydbg.bash  worm_border_and_interior_classifier.py  worm_classifier_for_autofocus.py
misc/_texture_analysis/: _texture_analysis.pyx  setup.py
misc/yapy_liblinear/: CMakeLists.txt  _linear.py  linear.py  setup.py  yapy_liblinear.vpj
misc/yapy_liblinear/cmake_modules/: FindPyCXX.cmake
misc/yapy_liblinear/source/liblinear/: CMakeLists.txt
misc/yapy_liblinear/source/yapy_liblinear/: CMakeLists.txt  LinearClassifier.cpp  LinearClassifier.h  yapy_liblinear_module.cpp
misc/yapy_liblinear/zp/: _fast_linear_classify.pyx  _linear.py  ctypes_util.py  setup.py
misc/yapy_libsvm/: svm.py
misc/zach_libsvm/: _fast_svm_classify.pyx  _svm.py  setup.py
wautofocuser/training_and_testing/: make_experiment_01_a_dataset.py
zacquisition/: run_daemon.py  service.py  service_property.py  service_property_validators.py  shm_numpy.py  zacquisition.vpj
zacquisition/camera/: andor.py  camera.dia
zacquisition/dm6000b/: client.py  daemon.py  dm6000b.py
zacquisition/dm6000b_flat/: client.py  daemon.py
zacquisition/root/: root.py
zacquisition/simple_example/: simple_example.py
